se crea navbar, footer, lobby y se adelanta la parte de shop

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>footer works!</p>
+<footer class="py-5 bg-dark">
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; <strong> Libros </strong> <i class="bi bi-book m-1"></i>  & <strong> Café </strong> <i class="bi bi-cup-hot m-1"></i> 2023</p></div>
+</footer>
+<!-- Bootstrap core JS-->
