--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,24 +1,25 @@
  <!-- Navigation-->
- <nav class="navbar navbar-expand-lg navbar-light bg-secundario bg-gradiente">
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#!">Libros & Café</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <a class="navbar-brand" href="/lobby">Libros & Café</a>
+      
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+            <ul class="navbar-nav  me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="/lobby">Inicio</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Compras</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/shop">Todos los productos</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="#!">Productos populares</a></li>
-                        <li><a class="dropdown-item" href="#!">Carrito</a></li>
+                        <li><a class="dropdown-item" href="/admin/management">Administración tienda</a></li>
+                        <li><a class="dropdown-item" href="/admin/shoppingHistory">Historial de compras</a></li>
                     </ul>
                 </li>
             </ul>
             <form class="d-flex">
-                <button class="btn btn-outline-dark" type="button" (click)="goToCarrito()" >
-                    <i class="bi bi-cart-fill me-1" href="/lobby" ></i>
+                <button class="btn btn-outline-light" type="button" (click)="goToCarrito()" >
+                    
+                    <i class="bi bi-cart-fill me-1"><span class="badge text-bg-danger">{{this.cantidadProducts}}</span></i>
                    Carrito
                     <span class="badge bg-dark text-white ms-1 rounded-pill"></span>
                 </button>
