--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,7 +1,8 @@
-<app-navbar></app-navbar>
-<br>
+<div class="body h-200">
+
 <div class="summary-questions container-lg">
     <div>
+      <br>
       <p class="text-start fs-1 mb-1 font1">Todos los Productos</p>
       <p class="text-start fs-4 font2">{{ totalProducts }} Productos</p>
     </div>
@@ -9,19 +10,16 @@
 
 
   <div class="container">
-    <div class="product" *ngFor="let product of products">
-      <div class="card mb-3 h-200">
+    <div class="product"  *ngFor="let product of products">
+      <div class="card mb-3 h-200" *ngIf="product.enabled">
         <div class="row g-0">
           <div class="col-md-3">
-            <div class="answer" style="margin-left: 5px">
+            <div class="answer" style="margin-left: 5px;">
               <br />
-              <div class="row">
-                <div class="text-center fs-1 font1">
-                
-                </div>
-              </div>
-              <div class="row">
-                <img src="{{product.img}}" alt="" width="200" height="100">
+            
+              
+              <div class="row"  >
+                <img  src="{{product.img}}"  alt="" width="200" height="100">
                
               </div>
             </div>
@@ -31,11 +29,16 @@
               <p class="card-text">
                 <small class="text-muted font1">Título:  {{product.name}} </small>
               </p>
+              <p class="card-text">
+                <small *ngIf="product.state" class="text-muted font1">Compra maxima:  <strong>{{product.max}} | </strong>
+                  Disponible: <strong>{{product.inInventory}} </strong> </small>
+                  <small class="text-muted font1"  *ngIf="!product.state">Espera noticias..</small>
+              </p>
     
   
               <p class="card-text font1"> ${{product.price}} </p>
               <div class="col-6">
-                <button type="button" (click)="pushProduct(product)" class="btn btn-outline-primary position-relative"><i class="bi bi-bag-check "></i> Añadir
+                <button data-bs-toggle="modal" data-bs-target="#exampleModal" [disabled]="!product.state" type="button" (click)="pushProduct(product)" class="btn btn-outline-primary position-relative"><i class="bi bi-bag-check "></i> Añadir
                     <span *ngIf="product.state" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-success">
                         disponible
                        
@@ -46,6 +49,7 @@
                       </span></button>
               
             </div> 
+            
               <p class="card-text font1">
                 <small class="text-muted"
                   >Autor:  {{product.autor}} </small
@@ -53,13 +57,15 @@
               </p>
             </div>
           </div>
+          
         </div>
       </div>
+      
     </div>
+    
   </div>
-  
-  <div class="">
-    <ul class="pagination justify-content-center">
+  <br>
+    <ul class="pagination justify-content-center" >
       <li class="page-item">
         <a class="page-link" (click)="previousPage()" aria-label="Previous">
           <span aria-hidden="true">&laquo;</span>
@@ -74,6 +80,5 @@
         </a>
       </li>
     </ul>
-  </div>
-  
-<app-footer></app-footer>
+ 
+</div>
