se crea componente para crear nuevos libros corriendo jaja

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,6 +12,7 @@
                         <li><a class="dropdown-item" href="/shop">Todos los productos</a></li>
                         <li><hr class="dropdown-divider" /></li>
                         <li><a class="dropdown-item" href="/admin/management">Administración tienda</a></li>
+                        <li><a class="dropdown-item" href="/admin/create">Ingresar producto</a></li>
                         <li><a class="dropdown-item" href="/admin/shoppingHistory">Historial de compras</a></li>
                     </ul>
                 </li>
