Frontend funcionando con login, guards y back con springboot security

--- a/src/app/admin-boss/management/management.component.html
+++ b/src/app/admin-boss/management/management.component.html
@@ -4,7 +4,7 @@
     <br>
     <div class="summary-questions container-lg">
         <div>
-          <p class="text-start fs-1 mb-1 font1">ADMIN. Todos los Productos</p>
+          <p class="text-start fs-1 mb-1 font1"> <strong>ADMIN.</strong> Todos los Productos</p>
           <p class="text-start fs-4 font2">{{ totalProducts }} Productos</p>
         </div>
       </div>
