--- a/src/app/pages/shop/shop.component.scss
+++ b/src/app/pages/shop/shop.component.scss
@@ -2,8 +2,9 @@
 
 .body{
   
-  background-attachment: fixed;
+    background-attachment: fixed;
     width: 100%;
+    min-height: 80vh!important ;
     background-image:  url(../../../assets/images/geometric-composition.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
