--- a/src/app/admin-boss/shopping-history/shopping-history.component.html
+++ b/src/app/admin-boss/shopping-history/shopping-history.component.html
@@ -1,3 +1,6 @@
+
+<div class="body h-200">
+  <br>
 <table class="table" >
     
     <thead>
@@ -48,7 +51,8 @@
     </tbody>
   </table>
  
-  <pagination-controls class="d-flex" style="justify-content: center;" (pageChange)="page = $event"></pagination-controls>
+ 
 
-  
+</div>
+<pagination-controls class="d-flex" style="justify-content: center;" (pageChange)="page = $event"></pagination-controls>
   
