--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,28 +3,44 @@
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="/lobby">Libros & Café</a>
       
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse"  id="navbarSupportedContent">
             <ul class="navbar-nav  me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="/lobby">Inicio</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Compras</a>
+                <li class="nav-item dropdown" *ngIf="this.userT">
+                    <a class="nav-link dropdown-toggle"  id="navbarDropdown"
+                       role="button" data-bs-toggle="dropdown" aria-expanded="false">Compras</a>
                     <ul class="dropdown-menu  dropdown-menu-dark" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/shop">Todos los productos</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="/admin/management">Administración tienda</a></li>
-                        <li><a class="dropdown-item" href="/admin/create">Ingresar producto</a></li>
+                        <li><a class="dropdown-item" *ngIf="this.userT.includes('ADMIN')" href="/admin/management">Administración tienda</a></li>
+                        <li><a class="dropdown-item" *ngIf="this.userT.includes('ADMIN')" href="/admin/create">Ingresar producto</a></li>
                         <li><a class="dropdown-item" href="/admin/shoppingHistory">Historial de compras</a></li>
                     </ul>
                 </li>
             </ul>
-            <form class="d-flex">
+            <form class="d-flex" *ngIf="this.userT">
                 <button class="btn btn-outline-light" type="button" (click)="goToCarrito()" >
                     
                     <i class="bi bi-cart-fill me-1"><span class="badge text-bg-danger">{{this.cantidadProducts}}</span></i>
                    Carrito
                     <span class="badge bg-dark text-white ms-1 rounded-pill"></span>
                 </button>
+                
             </form>
+            <button class="btn btn-outline-light  ms-3" *ngIf="!this.userT"
+             type="button" [routerLink]="['/login']" >
+                    
+                <i class="bi bi-box-arrow-in-left me-1"></i>
+               Login
+                <span class="badge bg-dark text-white ms-1 rounded-pill"></span>
+            </button>
+            <button class="btn btn-outline-light  ms-3" *ngIf="this.userT" type="button" (click)="logout()" >
+                    
+                <i class="bi bi-box-arrow-left me-1"></i>
+               Logout
+                <span class="badge bg-dark text-white ms-1 rounded-pill"></span>
+            </button>
+            
         </div>
     </div>
 </nav>
