--- a/src/app/pages/shoppingCart/shoppingCart.component.html
+++ b/src/app/pages/shoppingCart/shoppingCart.component.html
@@ -56,6 +56,12 @@
                         />
                       <label class="form-label" for="typeName">Nombre completo</label>
                     </div>
+
+                    <div class="form-outline mb-5">
+                      <input type="text"  placeholder="Correo electrónico" class="form-control form-control-lg" formControlName="email"
+                        />
+                      <label class="form-label" for="typeName">Correo electrónico</label>
+                    </div>
   
                     <div class="row">
                       <div class="col-md-6 mb-5">
